# MedGuard-AI-Capstone

./: .env.example  .gitignore  README.md  Untitled1.ipynb  justfile  main.py  medguard-project.ipynb  pyproject.toml  testmedgemma.ipynb
config/: settings.yaml
notebooks/: med_cleaner_engine.ipynb  test_medgemma.ipynb  verify_data.ipynb
scripts/: debug_merge.py  script_1.py  verify_data.py
src/MedGuard_AI/: config.py  inference_pipeline.py  io_manager.py  testMedgemma.ipynb
src/MedGuard_AI/pipelines/: __init__.py  etl.py
src/MedGuard_AI/processors/: lookups.py  notes.py  prescriptions.py
